<?xml version="1.0"?>
<package format="2">
  <name>stomp</name>
  <version>0.1.1</version>
  <description>This package  provides the STOMP (Stochastic Trajectory Optimization for Motion Planning) algorithm that can be used for robot motion planning tasks or other similar optimization tasks</description>
  <author>Jorge Nicho</author>
  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/stomp</url>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>eigen_catkin</depend>
  <depend>roscpp</depend>

</package>
